syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "ClientApi";

package order;

service OrderService {
  rpc GetOrders (OrdersRequest) returns (OrdersReply);
}

message OrdersRequest {
  string customer_name = 1;
}

message Order {
  string id = 1;
  string item = 2;
  int32 quantity = 3;
  google.protobuf.Timestamp order_date = 4;
  string customer_name = 5;
}

// The response message containing the greetings.
message OrdersReply {
  repeated Order orders = 1;
}
